--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -11,3 +11,16 @@ a {
 body {
   overflow: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background: rgba(59, 58, 58, 0.322);
+}
